--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -82,14 +82,17 @@ footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }
 
 /* Explanation */
 #main{width:100%; height: 100%; float:left; padding:50px; position: relative;}
-#main .mainimg{width:40%; float:left; height: 417px; margin-top:5px; margin-left:15px; background: #000;}
-#main .mainimg img{width:100%; height: 417px;}
-#main .subimg{width:15%; float:left; height: 400px}
-#main .subimg ul{float:left; width:100%;}
-#main .subimg ul li{background: #000; width: 100%; height: 100px; margin-top:5px;}
-#main .subimg ul li img{width:100%; height:100px;} 
+#main .mainimg{width:40%; float:left; height: 417px; margin-top:5px; margin-left:15px; background: #000; position: relative; overflow: hidden;}
+#main .mainimg>img{width:100%; height: 417px; position: absolute; left:-100%;}
+#main .mainimg>img:nth-child(1){ left: 0; top:0;}
+#main .subimg{width:15%; float:left; height: 400px;position: relative; z-index: 100; overflow: hidden;}
+#main .subimg ul{float:left; width:100%; position: absolute; }
+#main .subimg ul li{ width: 100%; height: 100px; margin-top:5px;}
+#main .subimg ul li img{width:90%; height:95px; cursor:pointer;} 
+#main .subimg .up{width:100%; height: 4%; float:left; background: #000; position: absolute; top:0; display: none; cursor: pointer; opacity: 0.7; z-index: 3}
+#main .subimg .down{width:100%; height: 4%; float:left; background: #000; position: absolute; bottom: 0; cursor: pointer; opacity: 0.7; z-index: 3; }
 
-#main .mainEx{width:40%; height: 400px; float:left; margin-left: 3%; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
+#main .mainEx{width:40%; height: 400px; float:right; margin-left: 3%; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
 #main .mainEx h1:nth-child(1){margin-top:60px;}
 #main .mainEx h1{text-align: center;}
 #main .mainEx ul{text-align: center;}
@@ -98,4 +101,26 @@ footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }
 #main .mainEx button:hover{background: #000; color:#fff;}
 #main .content{width:100%; height: 500px; float:left ; margin-top:35px; overflow:scroll; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
 #main .content h1{text-align: center;}
+
+/* select */
+
+#selectmaim{width:100%; position: relative; }
+#selectmain .selectsub{width:33.3%; height:317px; float:left; position: relative; cursor: pointer;}
+#selectmain .selectsub img{width:100%; height:100%; transition: 0.4s;}
+#selectmain .selectsub:nth-child(even){background:#000;}
+#selectmain .selectsub:nth-child(odd){ background:blue;}
+#selectmain .selectsub .sub_text{
+	bottom: 0;
+	width:100%;
+	float:left;
+	position: absolute;
+	color:black;
+	text-align: center;
+	padding-bottom: 5px;
+	background: #000;
+	opacity: 0.8;
+	color:#fff;
+}
+
+
 
