--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -48,10 +48,21 @@ header .search ul li:nth-child(2){padding-left:15px;	}
 
 .category{width:100%; height: 100%; float:left; position: relative; display:none;}
 .category ul{text-align:center;  padding: 0;}
-.category ul li{width:25%; height: 250px; line-height: 250px; float:left; border:1px solid #000; color:#fff; cursor:pointer; transition: 0.4s;}
-.category ul li:hover{background: #000; opacity: 0.7;}
-.category ul li:nth-child(odd){background:#0000ff}
-.category ul li:nth-child(even){background:#00ff00}
+.category ul li{width:33%; height: 250px; line-height: 250px; float:left; border:none; color:#fff; cursor:pointer; transition: 0.4s; position: relative;}
+.category ul li img{width:100%; height:250px;}
+.category ul li .sub_text{
+	bottom: 0;
+	width:100%;
+	float:left;
+	position: absolute;
+	color:black;
+	text-align: center;
+	padding-bottom: 5px;
+	background: #000;
+	opacity: 0.8;
+	color:#fff;
+}
+
 
 /* noticeboard */
 
@@ -102,17 +113,53 @@ footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }
 #main .content{width:100%; height: 500px; float:left ; margin-top:35px; overflow:scroll; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
 #main .content h1{text-align: center;}
 
-/* select */
 
-#selectmain{width:100%; height:100%; float:left position: relative; }
-#selectmain .selectsub{width:33.3%; height:317px; float:left; position: relative; cursor: pointer;}
-#selectmain .selectsub img{width:100%; height:100%; transition: 0.4s;}
-#selectmain .selectsub .sub_text{
+/* board */
+
+#mainboard{width:100%:float:left; margin-top:50px; position:relative;}
+#mainboard form>ul{width:100%; }
+#mainboard form>ul li{float:left; height: 50px; line-height: 50px;}
+#mainboard form>ul li>input[type=text]{width:100%; height: 100%; border:none;}
+#mainboard form>ul li:nth-child(2) input{width:50%; height:100%; float:left; border:none; text-align:center;}
+#mainboard form ul li input[name=sale]{width:50%; height: 100%; flaot:left border:none; text-align:center;}
+#mainboard form>ul li>input[type=number]{width:100%; height: 100%; border:none;}
+#mainboard form>ul li>input[type=button]{width:50%; float:left; border-right:1px solid #18FFFF; }
+#mainboard form>ul li span{width:50%; height100%; float:left; text-align:center}
+#mainboard form>ul li:nth-child(odd){width:20%; text-align:center; background:#84FFFF; border:1px solid #18FFFF; font-weight: bold; }
+#mainboard form>ul li:nth-child(even){width:80%;float:left; background:#fff; border:1px solid #18FFFF;}
+#mainboard form>ul li:nth-child(13){background:#84FFFF; height: 300px; line-height: 300px;}
+#mainboard form>ul li textarea{width:100%; float:left ; height: 300px; border:1px solid #18FFFF;}
+#mainboard .imgs{width:100%; height:150px; float:left;  }
+#mainboard .imgs .imgbtn{width:20%;float:left; height: 97px; border-left:1px solid #18FFFF; border-bottom:1px solid #18FFFF; }
+#mainboard .imgs .imgbtn img{background: #FF0000; border:3px solid #ff0000; border-radius:20%; text-align:center;}
+#mainboard .imgs ul{width:80%; float:left;  border-left:1px solid #18FFFF; border-right:1px solid #18FFFF; border-bottom:1px solid #18FFFF; height:97px; overflow: scroll; }
+#mainboard .imgs ul li{float:left}
+#mainboard .submit{width:100%; float:left; text-align: center; }
+#mainboard .submit input{width:180px; height:50px;  background:#fff;  margin-top:30px; margin-bottom:30px;border:1px solid #000; margin-left:15px; } 
+
+.saledialog{display:none; width:100%; float:left}
+.saledialog ul li{width:50%;float:left}
+.saledialog ul li img{width:300px; height:300px; cursor:pointer;}
+.saledialog ul li .sub_text{
+	bottom: 0;
+	width:100%;
+	float:left;
+	text-align:center;
+	padding-bottom: 5px;
+	background: #000;
+	opacity: 0.8;
+	color:#fff;
+}
+
+.bigcategory{width:	100%; height: 100%; float:left; position: relative; display:none;}
+.bigcategory ul{text-align:center;  padding: 0;}
+.bigcategory ul li{width:33%; height: 250px; line-height: 250px; float:left; border:none; color:#fff; cursor:pointer; transition: 0.4s; position: relative;}
+.bigcategory ul li img{width:100%; height:250px;}
+.bigcategory ul li .sub_text{
 	bottom: 0;
 	width:100%;
 	float:left;
 	position: absolute;
-	color:black;
 	text-align: center;
 	padding-bottom: 5px;
 	background: #000;
@@ -120,26 +167,9 @@ footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }
 	color:#fff;
 }
 
-.dialog{display:none; position: relative;}
-.dialog ul{width:100%; float:left; text-align: center; padding:0;}
-.dialog ul li{width:189px; height:200px; line-height:200px; background:#000;float:left;}
 
-/* board */
 
-#mainboard{width:100%:float:left; margin-top:50px; position:relative;}
-#mainboard form>ul{width:100%; }
-#mainboard form>ul li{float:left; height: 50px; line-height: 50px;}
-#mainboard form>ul li:nth-child(odd){width:20%; text-align:center; background:blue;}
-#mainboard form>ul li:nth-child(even){width:80%;float:left; background:#000;}
-#mainboard form>ul li:nth-child(13){background:red; height: 300px; line-height: 300px;}
-#mainboard form>ul li textarea{width:100%; float:left ; height: 300px;}
-#mainboard .imgs{width:100%; float:left; }
-#mainboard .imgs img{background: #FF0000; border:3px solid #ff0000; border-radius:20%; flaot:left}
-#mainboard .imgs ul{float:left;}
-#mainboard .imgs ul li{flaot:left}
-#mainboard .submit{width:100%; text-align: center; }
-#mainboard .submit input{width:180px; height:50px; background:#fff;  margin-top:30px; margin-bottom:30px;border:1px solid #000; margin-left:15px; }
-#mainboard .imgs{width:100%; height:150px; float:left; position:relative;}
+
 
 
 
