--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -18,12 +18,12 @@ body::before{width: 100%; height: 100%; float:left;  background:#000; opacity: 0
 header .menu{width:100%;  padding:50px; position: relative; z-index: 3;}
 header .menu ul{width:100%; height: 50px; text-align: center;  }
 header .menu ul li{float:right; width:124px; height:50px; color:#fff;  line-height: 50px; margin-left:3%; position: relative; overflow: hidden; cursor: pointer; border:1px solid #fff;}
-header .menu ul li::before{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; top:0; left:-100%; transition: 0.4s; }
+/* header .menu ul li::before{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; top:0; left:-100%; transition: 0.4s; }
 header .menu ul li::after{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; bottom: 0; left:100%; transition: 0.4s; }
 
 header .menu ul li:hover::before{content:"";  left:0px; }
 header .menu ul li:hover::after{content:"";  left:0px; }
-
+ */
 header .icon{width: 100%; float:left;}
 header .icon a{text-decoration:none; color: inherit; float:left; }
 
@@ -86,24 +86,30 @@ header .search ul li:nth-child(2){padding-left:15px;	}
 
 footer{  float:left;  z-index: 3;  bottom: 0; right:0; position: fixed;}
 footer> .noticeboardsubmit{ padding:50px;   z-index: 3; margin-bottom: 30px;}
-footer> .noticeboardsubmit>button{background:inherit; border:none; width: 124px; height: 50px; float:right; border:1px solid #000; color:#000;  position: relative; overflow: hidden;  cursor: pointer; }
-footer> .noticeboardsubmit>button::before{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; top:0; left:-100%; transition: 0.4s; }
-footer> .noticeboardsubmit>button::after{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; bottom: 0; left:100%; transition: 0.4s; }
+footer> .noticeboardsubmit>button{background:inherit; border:none; width: 124px; height: 50px; float:right; border:1px solid #000; color:#000;  position: relative; overflow: hidden;  cursor: pointer; transition:0.4s; }
+/* footer> .noticeboardsubmit>button::before{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; top:0; left:-100%; transition: 0.4s; }
+footer> .noticeboardsubmit>button::after{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; bottom: 0; left:100%; transition: 0.4s; } 
 
 footer> .noticeboardsubmit>button:hover::before{content:"";  left:0px; }
-footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }
+footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }*/
+
+footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 /* Explanation */
 #main{width:100%; height: 100%; float:left; padding:50px; position: relative;}
 #main .mainimg{width:40%; float:left; height: 417px; margin-top:5px; margin-left:15px; background: #000; position: relative; overflow: hidden;}
 #main .mainimg>img{width:100%; height: 417px; position: absolute; left:-100%;}
 #main .mainimg>img:nth-child(1){ left: 0; top:0;}
-#main .subimg{width:15%; float:left; height: 400px;position: relative; z-index: 100; overflow: hidden;}
+#main .subimg{width:138px; float:left; height: 400px;position: relative; border:1px solid #000; z-index: 100; overflow: hidden;}
 #main .subimg ul{float:left; width:100%; position: absolute; }
-#main .subimg ul li{ width: 100%; height: 100px; margin-top:5px;}
-#main .subimg ul li img{width:90%; height:95px; cursor:pointer;} 
-#main .subimg .up{width:100%; height: 4%; float:left; background: #000; position: absolute; top:0; display: none; cursor: pointer; opacity: 0.7; z-index: 3}
-#main .subimg .down{width:100%; height: 4%; float:left; background: #000; position: absolute; bottom: 0; cursor: pointer; opacity: 0.7; z-index: 3; }
+#main .subimg ul li{ width: 138px; height: 100px; padding:0; }
+#main .subimg ul li img{width:138px; height:100px; cursor:pointer; border:1px solid #000;} 
+#main .subimg .up{width:138px; height: 5%; float:left; background: #000; position: absolute; top:0; display: none; cursor: pointer; opacity: 0.4; z-index: 3; text-align:center;}
+#main .subimg .up img{z-index:4 ; background: #fff;  transition: 0.4s;}
+#main .subimg .up:hover img{background:#FFAB40;}
+#main .subimg .down{width:138px; height: 5%; float:left; background: #000; position: absolute; bottom: 0; display: none; cursor: pointer; opacity: 0.4; z-index: 3; text-align:center;  }
+#main .subimg .down img{ z-index:4;  background:#fff; transition: 0.4s;}
+#main .subimg .down:hover img{background:#FFAB40; }
 
 #main .mainEx{width:40%; height: 400px; float:right; margin-left: 3%; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
 #main .mainEx h1:nth-child(1){margin-top:60px;}
@@ -136,20 +142,22 @@ footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }
 #mainboard .imgs{width:100%; height:150px; float:left;  }
 #mainboard .imgs .imgbtn span{width:50%; float:left; line-height:97px; text-align:center; border-right:1px solid #FF8F00; background:#FFD54F; color:#FF8F00;font-weight: bold;}
 #mainboard .imgs .imgbtn{width:20%;float:left; height: 97px; border-left:1px solid #FF8F00; border-bottom:1px solid #FF8F00; background:#FFD54F; }
-#mainboard .imgs .imgbtn img{background: #FF0000; border:3px solid #FF0000; border-radius:20%; text-align:center; margin-left:10px; margin-top:10px;}
-#mainboard .imgs ul{width:80%; float:left;  border-left:1px solid #FF8F00; border-right:1px solid #FF8F00; border-bottom:1px solid #FF8F00; border-top:1px solid #FF8F00; height:97px; overflow: scroll; background: #fff;}
+#mainboard .imgs .imgbtn img{background: #FF0000; border:3px solid #FF0000; border-radius:20%; text-align:center; margin-left:10px; margin-top:10px; cursor:pointer;}
+#mainboard .imgs ul{width:80%; float:left;  border-left:1px solid #FF8F00; border-right:1px solid #FF8F00; border-bottom:1px solid #FF8F00; border-top:1px solid #FF8F00; height:97px; overflow: scroll; background: #fff; }
 #mainboard .imgs ul li{float:left}
 #mainboard .submit{width:100%; float:left; text-align: center; }
-#mainboard .submit input{width:180px; height:50px;   margin-top:30px; margin-bottom:30px;border:1px solid #000; background:inherit; color:#000; margin-left:15px; } 
+#mainboard .submit input{width:180px; height:50px;   margin-top:30px; margin-bottom:30px;border:1px solid #000; background:inherit; color:#000; margin-left:15px; transition:0.4s; } 
+#mainboard .submit input:hover{background: #000; color:#fff;}
 
 .saledialog{display:none; width:100%; float:left}
 .saledialog ul{width:100%; float:left ; text-align: center;}
-.saledialog ul li{width:200px ;height:200px; line-height:200px; cursor:pointer; border:1px solid #fff; background:#000; color:#fff;float:left;  }
-
+.saledialog ul li{width:200px ;height:200px; line-height:200px; cursor:pointer; border:1px solid #FF8F00; background:#FFD54F; color:#FF8F00;float:left; transition:0.4s; font-weight: bold; }
+.saledialog ul li:hover{background:#FFCA28;}
 
 .bigcategory{width:	100%; height: 100%; float:left; position: relative; display:none;}
 .bigcategory ul{text-align:center;  padding: 0;}
-.bigcategory ul li{width:195px; height: 200px; line-height:200px; border:1px solid #fff;  float:left;  color:#fff; background:#000; cursor:pointer; }
+.bigcategory ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left;  color:#FF8F00; background:#FFD54F; cursor:pointer; transition:0.4s;  font-weight: bold;}
+.bigcategory ul li:hover{background:#FFCA28;}
 
 /* memberup dialog */
 .memberupdialog{display:none;}
