--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -48,22 +48,12 @@ header .search ul li:nth-child(2){padding-left:15px;	}
 #search .sub_category ul li{float:left; width: 20%; background:#fff; border:1px solid #000; border-radius:10px; margin-right: 10px; cursor:pointer; box-shadow:2px 2px rgba(0,0,0,0.5); transition: 0.4s; } 
 #search .sub_category ul li:hover{background: #0000ff; color:#fff;}
 
-.category{width:100%; height: 100%; float:left; position: relative; display:none; z-index:1111;}
+.category{width:	100%; height: 100%; float:left; position: relative; display:none;}
 .category ul{text-align:center;  padding: 0;}
-.category ul li{width:33%; height: 250px; line-height: 250px; float:left; border:none; color:#fff; cursor:pointer; transition: 0.4s; position: relative;}
-.category ul li img{width:100%; height:230px;}
-.category ul li .sub_text{
-	bottom: 0;
-	width:100%;
-	float:left;
-	position: absolute;
-	color:black;
-	text-align: center;
-	padding-bottom: 5px;
-	background: #000;
-	opacity: 0.8;
-	color:#fff;
-}
+.category ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left;  color:#FF8F00; background:#FFD54F; cursor:pointer; transition:0.4s;  font-weight: bold;}
+.category ul li:hover{background:#FFCA28;}
+
+
 
 
 /* noticeboard */
@@ -149,7 +139,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #mainboard .submit input{width:180px; height:50px;   margin-top:30px; margin-bottom:30px;border:1px solid #000; background:inherit; color:#000; margin-left:15px; transition:0.4s; } 
 #mainboard .submit input:hover{background: #000; color:#fff;}
 
-.saledialog{display:none; width:100%; float:left}
+.saledialog{width:	100%; height: 100%; float:left; position: relative; display:none;}
 .saledialog ul{width:100%; float:left ; text-align: center;}
 .saledialog ul li{width:200px ;height:200px; line-height:200px; cursor:pointer; border:1px solid #FF8F00; background:#FFD54F; color:#FF8F00;float:left; transition:0.4s; font-weight: bold; }
 .saledialog ul li:hover{background:#FFCA28;}
