--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -1,9 +1,6 @@
 *{padding:0; margin:0 auto; list-style:none; font-family: "맑은고딕"}
 html,body{height: 100%}
 
-/* body{width: 100%; height: 100%; background:#000; background-image:url("/image/bg.jpg");background-position:top center; background-repeat:no-repeat; z-index: 1;}
-body::before{width: 100%; height: 100%; float:left;  background:#000; opacity: 0.7; content: ""; position: absolute; z-index: -100;} */
-
 .ui-widget-overlay{background:#000}	
 .ui-dialog{padding:0;}
 .ui-dialog .ui-dialog-content{padding:0;}
@@ -28,6 +25,9 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #profile .profilemenu{width:350px; height: 100%; background:#FFD54F; float:right; z-index:5; position: absolute; top:0 ; right:-350px; }
 #profile .profilemenu ul li{text-align:center; line-height:50px; border-bottom:1px solid #FF8F00; color:#FF8F00; transition:0.4s;}
 #profile .profilemenu ul li:nth-child(1) span{top:0; left:0; position: absolute; padding:10px	}
+#profile .profilemenu ul li:nth-child(6){cursor:pointer;}
+#profile .profilemenu ul li:nth-child(7){cursor:pointer;}
+#profile .profilemenu ul li a{text-decoration: none; color:inherit;}
 #profile .profilemenu ul li:hover{background:#FFCA28;}
 #profile .profilemenu img{border-radius:100%; padding-top:20px; border:1px solid #ff8f00}
 #profile form ul{width:700px; height:300px; box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5); margin-top:50px;}
@@ -84,12 +84,6 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 footer{  float:left;  z-index: 3;  bottom: 0; right:0; position: fixed;}
 footer> .noticeboardsubmit{ padding:50px;   z-index: 3; margin-bottom: 30px;}
 footer> .noticeboardsubmit>button{background:inherit; border:none; width: 124px; height: 50px; float:right; border:1px solid #000; color:#000;  position: relative; overflow: hidden;  cursor: pointer; transition:0.4s; }
-/* footer> .noticeboardsubmit>button::before{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; top:0; left:-100%; transition: 0.4s; }
-footer> .noticeboardsubmit>button::after{content: ""; width:100%; height: 5px; background:blue; float:left; position: absolute; bottom: 0; left:100%; transition: 0.4s; } 
-
-footer> .noticeboardsubmit>button:hover::before{content:"";  left:0px; }
-footer> .noticeboardsubmit>button:hover::after{content:"";  left:0px; }*/
-
 footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 /* Explanation */
