--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -13,12 +13,23 @@ html,body{height: 100%}
 .bg img:nth-child(1){z-index:1;}
 
 /* header */
-header .menu{width:100%; height:50px; background:#fff; position: absolute; z-index: 5; top:0; right:0;}
-header .menu ul{float:right }
-header .menu ul li{float:left; width:124px;  color:#000;  line-height: 50px; position: relative;  cursor: pointer;	}
-
+header .menu{width:100%; height:50px; background:#fff; position: absolute; z-index: 5; top:0; right:0; box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5)}
+header .menu .logo{float:left; width:140px; height: 100%; font-size:24px; padding:8px; font-weight:bold;}
+header .menu .logo a{text-decoration: none; color:inherit;}
+header .menu ul{float:right; text-align: center; }
+header .menu ul li{float:left; width:124px;  color:#000;  line-height: 50px; position: relative;  cursor: pointer; overflow: hidden;}
+header .menu ul li::before{content:""; width:100%; height:3px; background:#FF8F00; float:left; position: absolute; top:0; left:100%; transition:0.4s;}
+header .menu ul li::after{content:""; width:100%; height:3px; background:#FF8F00; float:left; position: absolute; bottom:0; right:100%; transition:0.4s;}
+header .menu ul li:hover::before{left:0;}
+header .menu ul li:hover::after{right:0;}
 header .icon{width: 143px; float:left;}
 header .icon a{text-decoration:none; color: inherit; float:left; }
+
+/* 큰 카테고리 dialog */
+.category{width:	100%; height: 100%; float:left; position: relative; display:none;}
+.category ul{text-align:center;  padding: 0;}
+.category ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left;  color:#FF8F00; background:#FFD54F; cursor:pointer; transition:0.4s;  font-weight: bold;}
+.category ul li:hover{background:#FFCA28;}
 
 
 #profile{width:100%; height:100%; float:left; position: absolute; overflow: hidden;}
@@ -53,10 +64,6 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #search .sub_category ul li{float:left; width: 20%; background:#fff; border:1px solid #000; border-radius:10px; margin-right: 10px; cursor:pointer; box-shadow:2px 2px rgba(0,0,0,0.5); transition: 0.4s; } 
 #search .sub_category ul li:hover{background: #0000ff; color:#fff;}
 
-.category{width:	100%; height: 100%; float:left; position: relative; display:none;}
-.category ul{text-align:center;  padding: 0;}
-.category ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left;  color:#FF8F00; background:#FFD54F; cursor:pointer; transition:0.4s;  font-weight: bold;}
-.category ul li:hover{background:#FFCA28;}
 
 
 
@@ -241,10 +248,47 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 	background:#FFCA28;
 }
 
+/* 정보수정 비밀번호 확인 dialog */
+.passwordCheck{display:none;}
+#passwordCheckform{width:100%; height: 100%; float:left; position: relative; }
+#passwordCheckform h1{width:100%; float:left; color:#555555; margin-top:15px; margin-bottom:15px; line-height:40px; text-align: center; position: relative; }
+#passwordCheckform img{background:#FFD54F; border-radius:100%; padding:5px; position: absolute;left:210px; top:0;}
+#passwordCheckform p{text-align:center;}
+#passwordCheckform form{width:100%; text-align: center; margin-top:30px;}
+#passwordCheckform form input{height:30px; }
+#passwordCheckform form input[type=submit]{width:120px; height:30px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00;  }
 
-	
 
+/* MeberUpdate */
+.privacy{width:60%; height: 600px; float:left; text-align: center; position: absolute; top: 0;  left:50%; transform:translate(-50%);}
+.privacy h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#ffd54f; color:#FF8F00; line-height: 40px;}
+.privacy ul li{float:left;}
+.privacy ul li:nth-child(odd){width:30%;  line-height: 50px;  text-align: center; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;  }
+.privacy ul li:nth-child(even){width:69%; height: 50px;  border:1px solid #ff8f00;}
+.privacy ul li input{width:100%; float:left; height: 50px; border:none; } 
+.privacy .memberupdatesubmit{width:100%; float:left; margin-top:30px; }
+.privacy .memberupdatesubmit input[type=button]{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
+.privacy .memberupdatesubmit input[type=submit]{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
+.privacy .memberupdatesubmit input[type=button]:hover{background:#FFCA28;}
+.privacy .memberupdatesubmit input[type=submit]:hover{background:#FFCA28;}
 
+.passwordchage{width:60%; height: 400px; float:left; text-align: center; position: absolute; top: 400px;  left:50%; transform:translate(-50%);}
+.passwordchage h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#ffd54f; color:#FF8F00; line-height: 40px;}
+
+.passwordchage ul li{float:left;}
+.passwordchage ul li:nth-child(1){width:30%; line-height:154px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;}
+.passwordchage ul li:nth-child(2){width:69%;}
+.passwordchage ul li ul{width:100%; float:left;}
+.passwordchage ul li ul li{float:none; width:100%; height: 50px;  border:1px solid #ff8f00;}
+.passwordchage ul li ul li:nth-child(1){width:100%; float:left;}
+.passwordchage ul li ul li:nth-child(2){width:100%; float:left;}
+.passwordchage ul li ul li:nth-child(3){width:100%; float:left;}
+.passwordchage ul li ul li input{width:100%; float:left; height: 50px; border:none; } 
+.passwordchage .passwordchagesubmit{width:100%; float:left; margin-top:30px; }
+.passwordchage .passwordchagesubmit input[type=button]{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
+.passwordchage .passwordchagesubmit input[type=submit]{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
+.passwordchage .passwordchagesubmit input[type=button]:hover{background:#FFCA28;}
+.passwordchage .passwordchagesubmit input[type=submit]:hover{background:#FFCA28;}
 
 
 
