--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -72,9 +72,10 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 
 
 #board{width:100%;float:left; position: relative; z-index: 3; }
-#board .boardtitle{width:100%; height:50px; line-height: 50px; font-size:30px; font-weight:bold; text-align: center; background: #000; color:#fff; padding:0;}
+#board .boardtitle{width:100%; height:50px; line-height: 50px; font-size:30px; font-weight:bold; text-align: center; background: #000; color:#fff;}
 #board .noticeboard ul{float:left; margin:1%; border:3px solid #f9f9f9;  margin:0;}
-#board .noticeboard ul li{text-align: center;  font-size:24px; color:#000;}
+#board .noticeboard ul li{text-align: center; font-size:24px; color:#000; padding:5px;}
+#board .noticeboard ul li>img{width:300px; height: 200px;}
 #board .noticeboard ul a{text-decoration: none; color: #fff;}
 #board .noticeboard ul li:nth-child(3){font-weight: bold;}
 
@@ -250,13 +251,14 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 /* 정보수정 비밀번호 확인 dialog */
 .passwordCheck{display:none;}
+.userDelete{display:none;}
 #passwordCheckform{width:100%; height: 100%; float:left; position: relative; }
 #passwordCheckform h1{width:100%; float:left; color:#555555; margin-top:15px; margin-bottom:15px; line-height:40px; text-align: center; position: relative; }
 #passwordCheckform img{background:#FFD54F; border-radius:100%; padding:5px; position: absolute;left:210px; top:0;}
 #passwordCheckform p{text-align:center;}
-#passwordCheckform form{width:100%; text-align: center; margin-top:30px;}
-#passwordCheckform form input{height:30px; }
-#passwordCheckform form input[type=submit]{width:120px; height:30px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00;  }
+#passwordCheckform {width:100%; text-align: center; margin-top:30px;}
+#passwordCheckform input{height:30px; }
+#passwordCheckform input[type=submit]{width:120px; height:30px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00;  }
 
 
 /* MeberUpdate */
