--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -71,7 +71,7 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 /* noticeboard */
 
 
-#board{width:100%;float:left; position: relative; z-index: 3; }
+#board{width:100%;float:left; position: relative; z-index: 3; margin-top:150px; }
 #board .boardtitle{width:100%; height:50px; line-height: 50px; font-size:30px; font-weight:bold; text-align: center; background: #000; color:#fff;}
 #board .noticeboard ul{float:left; margin:1%; border:3px solid #f9f9f9;  margin:0;}
 #board .noticeboard ul li{text-align: center; font-size:24px; color:#000; padding:5px;}
@@ -83,9 +83,8 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #board .noticeboard ul li:nth-child(5) button{border:none; background:inherit; width: 100%; height: 100%; padding:5px;}
 #board .noticeboard ul li:nth-child(5):hover{background: #000;}
 
-.search{margin-top:150px;}
-.search ul{float:right}
-.search ul li{float:left}
+.search{position: absolute; bottom:0; left:50%; transform:translate(-50%,0); margin-bottom:30px;}
+.search ul li{float:left; margin-right: 5px;}
 
 .pagination{position: relative; left:50%; transform:translate(-50%,0);}
 
@@ -135,8 +134,8 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #mainboard form>ul li span{width:50%; height100%; float:left; text-align:center}
 #mainboard form>ul li:nth-child(odd){width:20%; text-align:center; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; font-weight: bold; }
 #mainboard form>ul li:nth-child(even){width:80%;float:left; background:#fff; border:1px solid #FF8F00;}
-#mainboard form>ul li:nth-child(12){background:#FFD54F; color:#FF8F00; border-right:1px solid #FF8F00; height: 410px; line-height: 410px;}
-#mainboard form>ul li:nth-child(13){border:none;}
+#mainboard form>ul li:nth-child(11){background:#FFD54F; color:#FF8F00; border-right:1px solid #FF8F00; height: 410px; line-height: 410px;}
+#mainboard form>ul li:nth-child(12){border:none;}
 #mainboard form>ul li textarea{width:100%; padding:0; float:right; height: 300px; }
 #mainboard .imgs{width:100%; height:150px; float:left;  }
 #mainboard .imgs .imgbtn span{width:50%; float:left; line-height:97px; text-align:center; border-right:1px solid #FF8F00; background:#FFD54F; color:#FF8F00;font-weight: bold;}
