--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -83,7 +83,8 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #board .noticeboard ul li:nth-child(5) button{border:none; background:inherit; width: 100%; height: 100%; padding:5px;}
 #board .noticeboard ul li:nth-child(5):hover{background: #000;}
 
-.search{position: relative; bottom:0; left:50%; transform:translate(-50%,0); margin-bottom:30px;}
+.search{position: relative;  margin-bottom:30px;}
+.search ul{width:100%;  position:absolute; left:50%; transform:translate(-50%,0);}
 .search ul li{float:left; margin-right: 5px;}
 
 .pagination{position: relative; left:50%; transform:translate(-50%,0);}
