--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -36,8 +36,8 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #profile .profilemenu{width:350px; height: 100%; background:#FFD54F; float:right; z-index:5; position: absolute; top:0 ; right:-350px; }
 #profile .profilemenu ul li{text-align:center; line-height:50px; border-bottom:1px solid #FF8F00; color:#FF8F00; transition:0.4s;}
 #profile .profilemenu ul li:nth-child(1) span{top:0; left:0; position: absolute; padding:10px	}
-#profile .profilemenu ul li:nth-child(6){cursor:pointer;}
 #profile .profilemenu ul li:nth-child(7){cursor:pointer;}
+#profile .profilemenu ul li:nth-child(8){cursor:pointer;}
 #profile .profilemenu ul li a{text-decoration: none; color:inherit;}
 #profile .profilemenu ul li:hover{background:#FFCA28;}
 #profile .profilemenu img{border-radius:100%; padding-top:20px; border:1px solid #ff8f00}
@@ -83,9 +83,10 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #board .noticeboard ul li:nth-child(5) button{border:none; background:inherit; width: 100%; height: 100%; padding:5px;}
 #board .noticeboard ul li:nth-child(5):hover{background: #000;}
 
-.search{position: relative;  margin-bottom:30px;}
-.search ul{width:100%;  position:absolute; left:50%; transform:translate(-50%,0);}
+.search{width:100%; position: relative;  margin-bottom:30px;}
+.search ul{ position:absolute; left:50%; transform:translate(-50%,0);}
 .search ul li{float:left; margin-right: 5px;}
+.search ul li span{cursor: pointer;}
 
 .pagination{position: relative; left:50%; transform:translate(-50%,0);}
 
@@ -96,7 +97,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 /* Explanation */
 #main{width:100%; height: 100%; float:left; padding:50px; position: relative;}
-#main .mainimg{width:40%; float:left; height: 417px; margin-top:5px; margin-left:15px; background: #000; position: relative; overflow: hidden;}
+#main .mainimg{width:40%; float:left; height: 417px;  margin-left:15px; background: #000; position: relative; overflow: hidden; }
 #main .mainimg>img{width:100%; height: 417px; position: absolute; left:-100%;}
 #main .mainimg>img:nth-child(1){ left: 0; top:0;}
 #main .subimg{width:138px; float:left; height: 400px;position: relative; border:1px solid #000; z-index: 100; overflow: hidden;}
