--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -171,7 +171,8 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #memberup .memberupform form ul li:nth-child(even){width:80%;}
 #memberup .memberupform form ul li:nth-child(2) input{width:80%; border:none; border-left:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00; }
 #memberup .memberupform form ul li input{width:100%;height: 100%;float:left; background:#FFD54F;  border:1px solid #FF8F00;}
-#memberup .memberupform form ul li .check{width:20%; height: 100%; float:left; background:#FFD54F; border-right:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00 }
+#memberup .memberupform form ul li input[name=id]{width:60%;}
+#memberup .memberupform form ul li .check{width:40%; height: 100%; line-height:50px; float:left; background:#FFD54F; border-right:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00 }
 #memberup .memberupform .memberupsubmit{width:100%; float:left; text-align:center;}
 #memberup .memberupform .memberupsubmit input{width:120px; height: 40px; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; text-align: center;}
 
@@ -188,7 +189,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #loginform ul li:nth-child(even){width:80%;}
 #loginform ul li input{width:100%; height: 40px; background:#FFD54F; border:1px solid #FF8F00;}
 #loginform .loginsubmit{width:100%; height:40px; float:left}
-#loginform .loginsubmit input[type=submit]{width:100%; height: 100%; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; text-align: center; margin-top:50px; }
+#loginform .loginsubmit input[type=button]{width:100%; height: 100%; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; text-align: center; margin-top:50px; }
 
 /* 거래 내역 dialog */
 
