--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -316,3 +316,10 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #passwordFindForm .passwordform button:hover{background:#FFCA28;}
 #passwordFindForm .passwordform #passfind{width:100%; float:left; text-align:center; margin-top:10px;}
 
+/* ÃæÀü dialog*/
+.chargedialog{display:none;}
+#chargeform{width:100%; height: 100%; float:left; text-align: center;}
+#chargeform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
+
+#chargeform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
+#chargeform input[type=button]:hover{background:#FFCA28;}
