--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -118,9 +118,10 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #main .mainEx h1:nth-child(1){margin-top:60px;}
 #main .mainEx h1{text-align: center;}
 #main .mainEx ul{text-align: center;}
-#main .mainEx button{width:124px; height: 50px; border:none; background:inherit; border:1px solid #000;  transition: 0.4s;} 
-#main .mainEx button:nth-child(5){margin-left:25%;} 
-#main .mainEx button:hover{background: #000; color:#fff;}
+#main .mainEx .purchasebtn{width:100%; text-align: center;}
+#main .mainEx .purchasebtn button{width:124px; height: 50px; border:none; background:inherit; border:1px solid #000;  transition: 0.4s;} 
+
+#main .mainEx .purchasebtn button:hover{background: #000; color:#fff;}
 #main .content{width:100%; height: 500px; float:left ; margin-top:35px; overflow:scroll; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
 #main .content h1{text-align: center;}
 
@@ -323,3 +324,11 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 #chargeform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
 #chargeform input[type=button]:hover{background:#FFCA28;}
+
+/* ±¸¸Å dialog */
+.purchasedialog{display:none;}
+#purchaseform{width:100%; height: 100%; float:left; text-align: center;}
+#purchaseform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
+
+#purchaseform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
+#purchaseform input[type=button]:hover{background:#FFCA28;}
